.data/projects/darklua-0.17.2/src/nodes/snapshots/darklua_core__nodes__block__test__insert_statement_at_index_0_with_tokens.snap
---
source: src/nodes/block.rs
expression: block
---
Block {
    statements: [
        Repeat(
            RepeatStatement {
                block: Block {
                    statements: [],
                    last_statement: None,
                    tokens: None,
                },
                condition: False(
                    None,
                ),
                tokens: None,
            },
        ),
        Do(
            DoStatement {
                block: Block {
                    statements: [],
                    last_statement: None,
                    tokens: Some(
                        BlockTokens {
                            semicolons: [],
                            last_semicolon: None,
                            final_token: None,
                        },
                    ),
                },
                tokens: Some(
                    DoTokens {
                        do: Token {
                            position: LineNumberReference {
                                start: 0,
                                end: 2,
                                line_number: 1,
                            },
                            leading_trivia: [],
                            trailing_trivia: [
                                Trivia {
                                    position: LineNumberReference {
                                        start: 2,
                                        end: 3,
                                        line_number: 1,
                                    },
                                    kind: Whitespace,
                                },
                            ],
                        },
                        end: Token {
                            position: LineNumberReference {
                                start: 3,
                                end: 6,
                                line_number: 1,
                            },
                            leading_trivia: [],
                            trailing_trivia: [],
                        },
                    },
                ),
            },
        ),
    ],
    last_statement: None,
    tokens: Some(
        BlockTokens {
            semicolons: [
                None,
                Some(
                    Token {
                        position: LineNumberReference {
                            start: 6,
                            end: 7,
                            line_number: 1,
                        },
                        leading_trivia: [],
                        trailing_trivia: [],
                    },
                ),
            ],
            last_semicolon: None,
            final_token: None,
        },
    ),
}
